objects/MedProBT__Batch_Result__c.object
<CustomObject>
    <fields>
        <fullName>MedProBT__Batch_Number__c</fullName>
        <label>Batch Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Expected_not_parsed__c</fullName>
        <description>Rows that could not be successfully parsed.</description>
        <formula>MedProBT__Number_Expected__c - MedProBT__Number_Parsed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected not parsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__File_Result__c</fullName>
        <label>File Result</label>
        <referenceTo>MedProBT__File_Result__c</referenceTo>
        <relationshipName>Batch_Results</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MedProBT__Number_Expected__c</fullName>
        <label>Number Expected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Number_Parsed__c</fullName>
        <label>Number Parsed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Number_Updated__c</fullName>
        <label>Number Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Parsed_not_processed__c</fullName>
        <description>Number of records parsed less the sum of the number updated and the row results logged as exceptions.</description>
        <formula>MedProBT__Number_Parsed__c - (MedProBT__Number_Updated__c + MedProBT__Row_Result_Count__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parsed not processed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProBT__Row_Result_Count__c</fullName>
        <description>Count of Row Results within the batch. These include duplicates, purposefully skipped record types, and unmatched records.</description>
        <label>Row Result Count</label>
        <summaryFilterItems>
            <field>MedProBT__Row_Result__c.MedProBT__Error_Message__c</field>
            <operation>contains</operation>
            <value>&quot;UMR&quot;,&quot;Record Type&quot;,&quot;Duplicate&quot;,&quot;Match Type&quot;</value>
        </summaryFilterItems>
        <summaryForeignKey>MedProBT__Row_Result__c.MedProBT__Batch_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MedProBT__UMR_Count__c</fullName>
        <label>UMR Count</label>
        <summaryFilterItems>
            <field>MedProBT__Row_Result__c.MedProBT__Error_Message__c</field>
            <operation>startsWith</operation>
            <value>UMR:</value>
        </summaryFilterItems>
        <summaryForeignKey>MedProBT__Row_Result__c.MedProBT__Batch_Result__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MedProBT__Unmatched_Match_Types__c</fullName>
        <label>Unmatched Match Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProBT__Unmatched_Record_Types__c</fullName>
        <label>Unmatched Record Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MedPro Batch Result</label>
    <nameField>
        <displayFormat>BR-{000000}</displayFormat>
        <label>Batch Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MedPro Batch Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>